# data-drift-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: exploration.ipynb  quick_tests.py
src/data_drift_detector/latent_representation/: pca.py
src/data_drift_detector/utils/: load_json.py  plot.py
src/normaliser/utils/: differentiate.py
testing/: create_dataset.py
utils/: plot.py
